headlamp/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headlamp

spec:
  template:
    spec:
      containers:
        - name: headlamp
