headlamp/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp

spec:
  entryPoints:
    - websecure
  tls:
    secretName: headlamp-tls
  routes:
    - kind: Rule
      match: Host(`headlamp.toki317.dev`)
      middlewares:
        - name: auth-toki317-dev-admin
          namespace: auth
      services:
        - namespace: headlamp
          kind: Service
          name: headlamp
          port: http
          scheme: http
          strategy: RoundRobin
          weight: 1
